# $Id$ $URL$

0.04:

initial sharing support see examples/share.pl

passive mode autodetect by ips

writefile -> file_write
 openfile -> file_open

adc

adc hub

new new