@@ -14,3 +14,6 @@ adc
 adc hub
 
 new new
+
+tigerhash module
+
